feature adicionando envio de email para o usuario

--- a/src/main/resources/templates/email/reset-password/reset-password.html
+++ b/src/main/resources/templates/email/reset-password/reset-password.html
@@ -5,7 +5,7 @@
     <title>Redefinição de Senha - Código de Verificação</title>
 </head>
 <body>
-    <p>Olá,</p>
+    <p>Olá, <span th:text="${user}">user</span></p>
     <p>Recebemos uma solicitação para redefinir a senha da sua conta no site <strong th:text="${appName}">Nova Software</strong>.</p>
     <p>Seu código de verificação para redefinição de senha é: <strong th:text="${resetCode}">123456</strong></p>
     <p>Por favor, utilize este código para concluir o processo de redefinição de senha.</p>
